--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,107 +1,323 @@
-:root {
-  --max-width: 1100px;
-  --border-radius: 12px;
-  --font-mono: ui-monospace, Menlo, Monaco, 'Cascadia Mono', 'Segoe UI Mono',
-    'Roboto Mono', 'Oxygen Mono', 'Ubuntu Monospace', 'Source Code Pro',
-    'Fira Mono', 'Droid Sans Mono', 'Courier New', monospace;
-
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-
-  --primary-glow: conic-gradient(
-    from 180deg at 50% 50%,
-    #16abff33 0deg,
-    #0885ff33 55deg,
-    #54d6ff33 120deg,
-    #0071ff33 160deg,
-    transparent 360deg
-  );
-  --secondary-glow: radial-gradient(
-    rgba(255, 255, 255, 1),
-    rgba(255, 255, 255, 0)
-  );
-
-  --tile-start-rgb: 239, 245, 249;
-  --tile-end-rgb: 228, 232, 233;
-  --tile-border: conic-gradient(
-    #00000080,
-    #00000040,
-    #00000030,
-    #00000020,
-    #00000010,
-    #00000010,
-    #00000080
-  );
-
-  --callout-rgb: 238, 240, 241;
-  --callout-border-rgb: 172, 175, 176;
-  --card-rgb: 180, 185, 188;
-  --card-border-rgb: 131, 134, 135;
+:root{
+--primary-color:#FFF200 ;
+--secondary-color: #542E90 ;
 }
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-
-    --primary-glow: radial-gradient(rgba(1, 65, 255, 0.4), rgba(1, 65, 255, 0));
-    --secondary-glow: linear-gradient(
-      to bottom right,
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0.3)
-    );
-
-    --tile-start-rgb: 2, 13, 46;
-    --tile-end-rgb: 2, 5, 19;
-    --tile-border: conic-gradient(
-      #ffffff80,
-      #ffffff40,
-      #ffffff30,
-      #ffffff20,
-      #ffffff10,
-      #ffffff10,
-      #ffffff80
-    );
-
-    --callout-rgb: 20, 20, 20;
-    --callout-border-rgb: 108, 108, 108;
-    --card-rgb: 100, 100, 100;
-    --card-border-rgb: 200, 200, 200;
-  }
+*{
+padding: 0;
+margin: 0;
+box-sizing: border-box;
 }
-
-* {
-  box-sizing: border-box;
-  padding: 0;
-  margin: 0;
+.container{
+  margin: auto;
+  max-width: 1480px;
 }
-
-html,
-body {
-  max-width: 100vw;
-  overflow-x: hidden;
+/* start nav component*/
+.nav{
+  background-color: var(--primary-color);
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  height: 48px;
+  border: 1px solid #DBDBDB;
+  box-shadow: 0 0.87px 2px #00000040;
 }
-
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+.menu{
+  margin-right: 1rem;
+  font-size: 25px;
+  cursor: pointer;
 }
-
-a {
-  color: inherit;
+.logo{
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  cursor: pointer;
+}
+.offer{
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+}
+.free{
+  display: inline;
+}
+.shop{
+  font-weight: bold;
+  margin-left: 10px;
+  text-decoration: underline;
+  cursor: pointer;
+}
+/* .left{
+  margin-right: -4rem;
+}
+.right{
+  margin-left: -4rem;
+} */
+.info{
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  height: 100%;
+}
+.contact{
+  display: flex;
+  align-items: center;
+  font-size: 14px;
+  background-color: transparent ;
+  border: none;
+  cursor: pointer;
+}
+.order{
+  display: flex;
+  align-items: center;
+  background-color: transparent ;
+  border: none;
+  cursor: pointer;
+  margin-left: 5rem;
+}
+.store{
+  display: flex;
+  align-items: center;
+  background-color: transparent ;
+  border: none;
+  cursor: pointer;
+  margin-left: 5rem;
+}
+.info-icon{
+  font-size: 16px;
+  margin-right: 6px;
+}
+/* End nav component */
+/* start Header component */
+.header{
+  height: 84px;
+  box-shadow: 0 0.87px 2px #00000080;
+}
+.img-adidas{
+display: flex;
+justify-content: center;
+align-items: center;
+}
+.header-right{
+  display: flex;
+  align-items: center;
+}
+.cart-btn{
+  display: flex;
+  align-items: center;
+  border: none;
+  background: transparent;
+  cursor: pointer;
+}
+.cart-img{
+  height: 20px;
+}
+.cart{
+  font-size: 16px;
+  margin-left: 5px;
+}
+.whishlist-btn{
+  display: flex;
+  align-items: center;
+  margin-left: 5rem;
+  border: none;
+  background: transparent;
+  cursor: pointer;
+}
+.Heart-icon{
+  height: 24px;
+  font-size: 30px;
+}
+.whislist{
+  font-size: 16px;
+}
+.login-btn{
+  display: flex;
+  align-items: center;
+  margin-left: 5rem;
+  border: none;
+  background: transparent;
+  cursor: pointer;
+}
+.login-icon{
+  font-size: 25px;
+  height: 28px;
+}
+.login{
+  font-size: 16px;
+}
+/* End Header component */
+/* start Section component */
+.section-row{
+  height: 48px;
+  background-color: black;
+}
+.sections{
+  display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    width: 82%;
+    margin-left: 15rem;
+}
+.section-col{
+  display: flex;
+  justify-content: center;
+}
+.section-link{
+  font-size: 17px;
+  color: #fff;
+}
+.section-link:hover{
+  color: var(--primary-color);
+}
+.offers{
+  color: #f00;
+}
+.routs{
+  height: 84px;
+  background-color: #ffffff;
+  display: flex;
+  align-items: center;  
+  box-shadow: 0 0.87px 2px #575756;
+}
+.routs div{
+  margin-left: 25rem;
+  width: 100%;
+}
+.routs p{
+  font-size: 16px;
+  text-decoration: underline;
+  display: inline;
+  font-weight: bold;
+}
+.routs span{
   text-decoration: none;
+  font-size: 16px;
+  font-weight: bold;
+}
+/* End Section component */
+/* start Content component */
+.content-row{
+  margin-top: 32px;
+}
+.content-col-right{
+  display: flex;
+  justify-content: center;
+  margin-left: 18rem;
+  
+}
+.img-main{
+  border-radius: 30px;
+}
+.content{
+  height: 100%;
+}
+.specifications{
+  font-size: 18px;
+  font-weight: bold;
+  margin: 14px 0 15px 0;
+}
+.ratr{
+  display: flex;
+  align-items: center;
+}
+.stars{
+  font-size: 20px;
+  color: #E09B00;
+}
+.evaluation{
+  font-size: 17px;
+  margin-left: 10px;
+  font-weight: bold;
+}
+.rate-num{
+  font-size: 15px;
+  color: #575756;
+  margin-left: 10px;
+}
+.rate-div{
+  display: flex;
+  align-items: center;
+  box-shadow: 0 0.87px 0px #e4dada;
+  margin-bottom: 5px;
+}
+.price{
+  display: inline;
+  font-size: 30px;
+  font-weight: bold;
+  color: var(--secondary-color);
+}
+.descount-dev{
+  margin-left: 3rem;
+    background: yellow;
+    display: flex;
+    align-items: center;
+    width: 10%;
+    border: 1px solid yellow;
+}
+.descount{
+  margin-left: 5px;
+}
+.size-container{
+  height: 90px;
+  box-shadow: 0 0.87px 0px #e4dada;
+  margin-bottom: 5px;
+}
+.size{
+  font-size: 18px;
+}
+.size-num{
+  height: 46px;
+  display: flex;
+  align-items: center;
+  margin-top: 10px;
+}
+.size-val-sm{
+  color: var(--secondary-color);
+  font-size: 12px;
+  border: 1px solid #e4dada;
+height: 55px;
+display: flex;
+align-items: center;
+border-radius: 30px;
+width: 55px;
+justify-content: center;
+}
+.size-val-sm:hover,.size-val:hover{
+  background-color: #ECECEC;
+
+}
+.size-val{
+  color: var(--secondary-color);
+  border: 1px solid #e4dada;
+  font-size: 12px;
+height: 55px;
+display: flex;
+align-items: center;
+border-radius: 30px;
+width: 55px;
+justify-content: center;
+margin-left: 10px;
+}
+.color{
+  font-size: 18px;
+  margin-bottom: 10px;
+}
+.main-red{
+  margin-left: 10px;
+}
+.main-black:hover,.main-red:hover{
+  border: 1px solid var(--secondary-color);
+  border-radius: 50px;
+  height: 80px;
+  width: 80px;
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
-}
+
+/* font-size: 12px;
+background: gray;
+height: 55px;
+display: flex;
+align-items: center;
+border-radius: 30px;
+width: 55px;
+justify-content: center; */
